...
                            <constraint firstItem="PeS-dB-x01" firstAttribute="trailing" secondItem="jBk-DG-EjD" secondAttribute="trailing" id="xS1-aD-Ojq"/>
                            <constraint firstItem="jBk-DG-EjD" firstAttribute="leading" secondItem="PeS-dB-x01" secondAttribute="leading" id="yBM-dV-hBA"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="EAj-i9-cIe"/>
                    <connections>
                        <outlet property="backButton" destination="JpV-b2-8ib" id="Hsk-aO-EBL"/>
                        <outlet property="imageView" destination="uCT-H4-aRe" id="cKx-zy-U0C"/>
                        <outlet property="scrollView" destination="jBk-DG-EjD" id="Stp-ED-yi3"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="SYU-sp-ubR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="QLt-2d-Yqj"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="16"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                </userDefinedRuntimeAttributes>
...
