...
    
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        print("🔍 WebViewViewController viewDidLoad")

        if presenter == nil {
            let authHelper = AuthHelper()
            presenter = WebViewPresenter(authHelper: authHelper)
        }
...
